# Proyecto_HAR

./: README.md
Nodo1/: CMakeLists.txt  Doxyfile  README.md
Nodo1/docs/html/: annotated.html  annotated_dup.js  app__radio_8c.html  app__radio_8c.js  app__radio_8c__incl.dot  app__radio_8c_a3680ee511bef98d677712359be85e97d_icgraph.dot  app__radio_8c_ac368680c0551dfacc206bd83250ca1b5_icgraph.dot  app__radio_8c_adda9479017d20caef45648f89c9bec0f_cgraph.dot  app__radio_8c_adda9479017d20caef45648f89c9bec0f_icgraph.dot  app__radio_8c_ae04befa1570e4e1c21d908f402c80127_icgraph.dot  app__radio_8c_source.html  app__radio_8h.html  app__radio_8h.js  app__radio_8h__dep__incl.dot  app__radio_8h__incl.dot  app__radio_8h_a3680ee511bef98d677712359be85e97d_icgraph.dot  app__radio_8h_adda9479017d20caef45648f89c9bec0f_cgraph.dot  app__radio_8h_adda9479017d20caef45648f89c9bec0f_icgraph.dot  app__radio_8h_ae04befa1570e4e1c21d908f402c80127_icgraph.dot  app__radio_8h_source.html  app__signal_8c.html  app__signal_8c.js  app__signal_8h.js  (+155 more)
Nodo1/main/: CMakeLists.txt  app_radio.c  app_radio.h  app_signal.c  app_signal.h  app_tasks.c  app_tasks.h  config.h  hal_sensors.c  hal_sensors.h  main.c
Nodo2/: CMakeLists.txt  Doxyfile  README.md  sdkconfig.defaults
Nodo2/logs/: adl_session_7A41.csv  adl_session_DAC3.csv
Nodo2/main/: CMakeLists.txt  app_config.h  app_tasks.c  app_tasks.h  app_types.h  hal_battery.c  hal_battery.h  hal_i2c.c  hal_i2c.h  hal_mpu6050.c  hal_mpu6050.h  hal_radio.c  hal_radio.h  hal_sdcard.c  hal_sdcard.h  imu_features.c  imu_features.h  main.c
Nodo2/scripts/: logger.py
(+326 files in other folders)
